add ajv, remove ts path aliases

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,10 +10,7 @@
     "baseUrl": ".",
     "allowJs": false,
     "esModuleInterop": true,
-    "resolveJsonModule": true,
-    "paths": {
-      "src": ["src/*"]
-    }
+    "resolveJsonModule": true
   },
   "include": ["src/**/*"]
 }
