--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   "bin": "./dist/cli/index.js",
   "scripts": {
     "dev": "ts-node -r tsconfig-paths/register ./src/cli",
-    "prepare": "rm -rf dist && tsc",
     "build": "rm -rf dist && tsc",
     "test": "jest",
     "lint": "eslint './src/**/*.{ts,tsx}'",
@@ -48,6 +47,7 @@
     "typescript": "^3.4.2"
   },
   "dependencies": {
+    "ajv": "^6.10.0",
     "caller-path": "^2.0.0",
     "handlebars": "^4.1.2",
     "ink": "^2.1.1",
