--- a/package.json
+++ b/package.json
@@ -43,8 +43,7 @@
     "ts-jest": "^24.0.2",
     "ts-node": "^8.1.0",
     "tsconfig-paths": "^3.8.0",
-    "type-fest": "^0.3.0",
-    "typescript": "^3.4.2"
+    "type-fest": "^0.3.0"
   },
   "dependencies": {
     "ajv": "^6.10.0",
@@ -58,6 +57,7 @@
     "prompts": "^2.0.4",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
+    "typescript": "^3.4.5",
     "yargs": "^13.2.2"
   },
   "files": [
