--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "main": "./dist/cli/index.js",
   "bin": "./dist/cli/index.js",
   "scripts": {
-    "dev": "ts-node -r tsconfig-paths/register ./src/cli",
+    "dev": "ts-node ./src/cli",
+    "prepare": "rm -rf dist && tsc",
     "build": "rm -rf dist && tsc",
     "test": "jest",
     "lint": "eslint './src/**/*.{ts,tsx}'",
