--- a/example/package.json
+++ b/example/package.json
@@ -19,7 +19,7 @@
     "@types/react": "^16.0.36",
     "@types/styled-jsx": "^2.2.3",
     "fork-ts-checker-webpack-plugin": "^0.4.3",
-    "typewriter": "segmentio/typewriter#v7.0.0"
+    "typewriter": "7.0.0-11"
   },
   "license": "MIT",
   "babel": {
