--- a/example/typewriter.yml
+++ b/example/typewriter.yml
@@ -1,9 +1,7 @@
 # Segment Typewriter Configuration (https://github.com/segmentio/typewriter)
 # Just run `npx typewriter@next` to re-generate a client with the latest versions of these events.
 
-tokenCommand: aws-okta exec dev-privileged -- chamber export app | jq -r .typewriter_segment_prod_token
-
-path: ./src/typewriter
+tokenCommand: aws-okta exec dev-privileged -- chamber export typewriter | jq -r .typewriter_token
 
 # You can configure the options of this language's generator.
 # See: https://segment.com/docs/typewriter/typescript
@@ -11,7 +9,7 @@ language:
   name: typescript
 
 trackingPlans:
-  # Tracking Plan: App
-  # https://app.segment.com/segment_prod/protocols/tracking-plans/rs_16W7KaDjpZ09dI341chHKgYJah9
-  - id: rs_16W7KaDjpZ09dI341chHKgYJah9
-    workspaceSlug: segment_prod
+  # Typewriter: Slothgram
+  # https://app.segment.com/schema-test/protocols/tracking-plans/rs_1CawusBJdQmYmspt8rWXtdb7COT
+  - id: rs_1CawusBJdQmYmspt8rWXtdb7COT
+    workspaceSlug: schema-test
