--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,5 +11,6 @@
     "baseUrl": ".",
     "resolveJsonModule": true
   },
-  "include": ["src/**/*"]
+  "include": ["src/**/*"],
+  "exclude": ["src/typewriter/**/*"]
 }
