--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "prompts": "^2.0.4",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
+    "sort-keys": "^3.0.0",
     "typescript": "^3.4.5",
     "yargs": "^13.2.2"
   },
