--- a/.gitignore
+++ b/.gitignore
@@ -72,7 +72,7 @@ package-lock.json
 .vscode
 
 # Typewriter client
-src/typewriter/*.ts
+src/analytics/*.ts
 
 # Example Typewriter client
 example/analytics/*.ts
