--- a/package.json
+++ b/package.json
@@ -103,7 +103,7 @@
   },
   "eslintIgnore": [
     "tests/generated/**/*",
-    "src/typewriter/**/*",
+    "src/analytics/**/*",
     "example/analytics/**/*"
   ],
   "jest": {
