--- a/tests/e2e/javascript-node/typewriter.yml
+++ b/tests/e2e/javascript-node/typewriter.yml
@@ -1,16 +1,8 @@
 # Segment Typewriter Configuration (https://github.com/segmentio/typewriter)
 # Just run `npx typewriter@next` to re-generate a client with the latest versions of these events.
 
-# Currently, Typewriter is configured to read the token from TYPEWRITER_TOKEN in your environment.
-# Alternatively, you can supply this token using a shell command, which could use your team's secret
-# management tooling to fetch a shared Segment API token.
-# For example, at Segment, we use https://github.com/segmentio/chamber for secret management,
-# and https://github.com/segmentio/aws-okta to perform SSO with Okta.
-# Our configuration looks like this:
-# tokenCommand: aws-okta exec dev-privileged -- chamber export app | jq -r .typewriter_segment_prod_token
+tokenCommand: aws-okta exec dev-privileged -- chamber export typewriter | jq -r .typewriter_token
 
-# You can configure the options of this language's generator.
-# See: https://segment.com/docs/typewriter/javascript
 language:
   name: javascript
   env: node
