--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "@types/node": "^11.13.6",
     "@types/node-fetch": "^2.3.3",
     "@types/prettier": "^1.16.3",
-    "@types/prompts": "^2.4.0",
+    "@types/prompts": "2.0.0",
     "@typescript-eslint/eslint-plugin": "^1.6.0",
     "@typescript-eslint/parser": "^1.6.0",
     "copyfiles": "^2.1.0",
