--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "node": ">=0.10.15"
   },
   "devDependencies": {
+    "@types/analytics-node": "^3.1.1",
     "@types/jest": "^24.0.11",
     "@types/js-yaml": "^3.12.1",
     "@types/json-schema": "^7.0.3",
@@ -48,6 +49,7 @@
   },
   "dependencies": {
     "ajv": "^6.10.0",
+    "analytics-node": "^3.3.0",
     "caller-path": "^2.0.0",
     "handlebars": "^4.1.2",
     "ink": "^2.1.1",
