--- a/tests/e2e/docker-compose.yml
+++ b/tests/e2e/docker-compose.yml
@@ -1,8 +1,7 @@
 version: "3"
 services:
   snapshotter:
-    # TODO: move this into a public Docker repo
-    image: "528451384384.dkr.ecr.us-west-2.amazonaws.com/snapshotter:v1"
+    image: "segment/snapshotter:v0.0.1"
     healthcheck:
       test: "curl --silent --show-error --fail localhost:8765/messages || exit 1"
     ports:
