--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "node": ">=0.10.15"
   },
   "devDependencies": {
+    "@hapi/joi": "^15.1.0",
     "@types/analytics-node": "^3.1.1",
+    "@types/hapi__joi": "^15.0.2",
     "@types/jest": "^24.0.11",
     "@types/js-yaml": "^3.12.1",
     "@types/json-schema": "^7.0.3",
