update e2e tests to use jest

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,6 +45,13 @@ jobs:
       - attach_workspace: { at: . }
       - run: yarn lint
 
+  test-unit-tests:
+    docker:
+      - image: circleci/node:10.15
+    steps:
+      - attach_workspace: { at: . }
+      - run: yarn run jest --testPathIgnorePatterns 'tests/e2e/.*'
+
   test-javascript-node:
     docker:
       - image: circleci/node:10.15
@@ -79,6 +86,8 @@ workflows:
           context: snyk
           requires: [setup]
       - lint:
+          requires: [setup]
+      - test-unit-tests:
           requires: [setup]
       - test-javascript-node:
           requires: [setup]
