--- a/tests/e2e/javascript-node/typewriter.yml
+++ b/tests/e2e/javascript-node/typewriter.yml
@@ -8,10 +8,12 @@ tokenCommand: aws-okta exec dev-privileged -- chamber export typewriter | jq -r 
 client:
   sdk: analytics-node
   language: javascript
+  moduleTarget: es5
+  scriptTarget: es5
 
 trackingPlans:
   # Tracking Plan: Typewriter E2E Tracking Plan
-  # https://app.segment.com/schema-test/protocols/tracking-plans/rs_1LpnSqR3KY2Le6xvKUmGYZ5Mslc
-  - id: rs_1LpnSqR3KY2Le6xvKUmGYZ5Mslc
-    workspaceSlug: schema-test
+  # https://app.segment.com/segment_prod/protocols/tracking-plans/rs_1N9oTnc5O8cv1peY65iXsSPnzGP
+  - id: rs_1N9oTnc5O8cv1peY65iXsSPnzGP
+    workspaceSlug: segment_prod
     path: ./analytics
