--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -75,16 +75,12 @@ jobs:
       - attach_workspace: { at: . }
       - run: xcrun simctl list
       - run:
-          name: Install Docker client
-          command: |
-            set -x
-            VER="18.09.3"
-            curl -L -o /tmp/docker-$VER.tgz https://download.docker.com/linux/static/stable/x86_64/docker-$VER.tgz
-            tar -xz -C /tmp -f /tmp/docker-$VER.tgz
-            mv /tmp/docker/* /usr/bin
-      - run:
           name: Start the Snapshotter
-          command: docker run -p 8765:8765 -itd segment/snapshotter:latest
+          command: |
+            git checkout git@github.com:segmentio/snapshotter.git
+            cd snapshotter
+            yarn
+            yarn dev
       - run:
           name: Install build dependencies
           command: |
