--- a/example/package.json
+++ b/example/package.json
@@ -7,7 +7,9 @@
     "start": "next start"
   },
   "dependencies": {
+    "@segment/snippet": "^4.4.0",
     "@zeit/next-typescript": "1.1.0",
+    "evergreen-ui": "^4.17.0",
     "next": "^7.0.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
@@ -15,11 +17,11 @@
     "typescript": "^3.0.1"
   },
   "devDependencies": {
-    "@types/next": "^7.0.1",
+    "@types/next": "^8.0.5",
     "@types/react": "^16.0.36",
     "@types/styled-jsx": "^2.2.3",
     "fork-ts-checker-webpack-plugin": "^0.4.3",
-    "typewriter": "7.0.0-13"
+    "typewriter": "7.0.0-25"
   },
   "license": "MIT",
   "babel": {
