--- a/typewriter.yml
+++ b/typewriter.yml
@@ -3,7 +3,7 @@
 
 tokenCommand: aws-okta exec dev-privileged -- chamber export typewriter | jq -r .typewriter_token
 
-# You can configure the options of this client's generator:
+# You can find more documentation on configuring this client in the Segment docs.
 # See: https://segment.com/docs/typewriter/typescript
 client:
   sdk: analytics-node
