--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "typewriter",
-  "version": "7.0.0-25",
+  "version": "7.0.0-26",
   "description": "A compiler for generating strongly typed analytics clients via Segment Protocols",
   "repository": "ssh://git@github.com/segmentio/typewriter.git",
   "homepage": "https://github.com/segmentio/typewriter",
@@ -67,10 +67,10 @@
     "prompts": "^2.0.4",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
+    "snyk": "^1.105.0",
     "sort-keys": "^3.0.0",
     "typescript": "^3.4.5",
-    "yargs": "^13.2.2",
-    "snyk": "^1.105.0"
+    "yargs": "^13.2.2"
   },
   "files": [
     "dist/**/*"
