--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -66,7 +66,6 @@ jobs:
     steps:
       - attach_workspace: { at: . }
       - run: make test-javascript-node
-
   test-typescript-node:
     docker:
       - image: circleci/node:10.15
@@ -75,6 +74,13 @@ jobs:
       - attach_workspace: { at: . }
       - run: make test-typescript-node
 
+  test-web-javascript:
+    docker:
+      - image: cypress/browsers:chrome69
+      - image: segment/snapshotter:v0.0.1
+    steps:
+      - attach_workspace: { at: . }
+      - run: make test-web-javascript
   test-web-typescript:
     docker:
       - image: cypress/browsers:chrome69
@@ -127,6 +133,8 @@ workflows:
       - test-javascript-node:
           requires: [setup]
       - test-typescript-node:
+          requires: [setup]
+      - test-web-javascript:
           requires: [setup]
       - test-web-typescript:
           requires: [setup]
