--- a/example/package.json
+++ b/example/package.json
@@ -24,6 +24,7 @@
   "devDependencies": {
     "@types/next": "^8.0.5",
     "@types/react": "^16.0.36",
+    "@types/segment-analytics": "^0.0.31",
     "@types/styled-jsx": "^2.2.3",
     "fork-ts-checker-webpack-plugin": "^0.4.3",
     "typewriter": "7.0.0-25"
