--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "js-yaml": "^3.13.1",
     "lodash": "^4.17.11",
     "node-fetch": "^2.5.0",
+    "node-machine-id": "^1.1.12",
     "prettier": "^1.17.0",
     "prompts": "^2.0.4",
     "prop-types": "^15.7.2",
