--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "bin": "./dist/cli/index.js",
   "scripts": {
     "dev": "IS_DEVELOPMENT=true ts-node ./src/cli",
-    "build": "rm -rf dist && yarn dev build && tsc && copyfiles -u 1 \"src/**/*.hbs\" \"src/cli/typewriter.yml.schema.json\" dist/",
+    "build": "rm -rf dist && tsc && copyfiles -u 1 \"src/**/*.hbs\" \"src/cli/typewriter.yml.schema.json\" dist/",
     "build-example": "make build-example",
     "test": "jest --testPathIgnorePatterns 'tests/e2e/.*'",
     "e2e": "make e2e",
@@ -53,7 +53,8 @@
     "ts-jest": "^24.0.2",
     "ts-node": "^8.1.0",
     "tsconfig-paths": "^3.8.0",
-    "type-fest": "^0.3.0"
+    "type-fest": "^0.3.0",
+    "typewriter": "^7.0.0-27"
   },
   "dependencies": {
     "ajv": "^6.10.0",
