--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "lint": "eslint './src/**/*.{ts,tsx}'",
     "precommit": "lint-staged",
     "release": "yarn run build && np",
-    "prerelease": "yarn run build && ./node_modules/.bin/np prerelease --any-branch --tag next --no-release-draft --no-yarn",
+    "prerelease": "yarn run build && ./node_modules/.bin/np prerelease --any-branch --tag next --no-release-draft",
     "snyk-protect": "snyk protect"
   },
   "engines": {
