tokenCommand -> scripts, add scripts.after

--- a/tests/e2e/web-typescript/typewriter.yml
+++ b/tests/e2e/web-typescript/typewriter.yml
@@ -1,7 +1,8 @@
 # Segment Typewriter Configuration (https://github.com/segmentio/typewriter)
 # Just run `npx typewriter@next` to re-generate a client with the latest versions of these events.
 
-tokenCommand: aws-okta exec dev-privileged -- chamber export typewriter | jq -r .typewriter_token
+scripts:
+  token: aws-okta exec dev-privileged -- chamber export typewriter | jq -r .typewriter_token
 
 # You can configure the options of this client's generator.
 # See: https://segment.com/docs/typewriter/typescript
