--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "ts-node": "^8.1.0",
     "tsconfig-paths": "^3.8.0",
     "type-fest": "^0.3.0",
-    "typewriter": "^7.0.0-30"
+    "typewriter": "^7.0.0-33"
   },
   "dependencies": {
     "@hapi/joi": "^15.1.1",
@@ -61,14 +61,14 @@
     "handlebars": "^4.1.2",
     "ink": "^2.1.1",
     "js-yaml": "^3.13.1",
-    "lodash": "^4.17.11",
+    "lodash": "4.17.12",
     "node-fetch": "^2.5.0",
     "node-machine-id": "^1.1.12",
     "prettier": "^1.17.0",
     "prompts": "^2.0.4",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
-    "snyk": "^1.105.0",
+    "snyk": "1.192.5",
     "sort-keys": "^3.0.0",
     "typescript": "^3.4.5",
     "yargs": "^13.2.2"
