--- a/example/package.json
+++ b/example/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "test": "jest"
   },
   "dependencies": {
     "@segment/snippet": "^4.4.0",
@@ -26,8 +27,16 @@
     "@types/react": "^16.0.36",
     "@types/segment-analytics": "^0.0.31",
     "@types/styled-jsx": "^2.2.3",
+    "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.13.1",
+    "jest": "^24.8.0",
     "fork-ts-checker-webpack-plugin": "^0.4.3",
     "typewriter": "7.0.0-25"
+  },
+  "jest": {
+    "setupFilesAfterEnv": [
+      "<rootDir>tests/setup-tests.js"
+    ]
   },
   "babel": {
     "presets": [
