--- a/example/typewriter.yml
+++ b/example/typewriter.yml
@@ -1,11 +1,11 @@
-# Segment Typewriter Configuration (https://github.com/segmentio/typewriter)
+# Segment Typewriter Configuration (https://segment.com/docs/protocols/typewriter)
 # Just run `npx typewriter@next` to re-generate a client with the latest versions of these events.
 
 scripts:
   token: aws-okta exec dev-privileged -- chamber export automated-testing-demo | jq -r .typewriter_token
 
-# You can configure the options of this client's generator.
-# See: https://segment.com/docs/protocols/typewriter/typescript
+# You can find more documentation on configuring this client in the Segment docs.
+# See: https://segment.com/docs/protocols/typewriter
 client:
   sdk: analytics.js
   language: typescript
