--- a/tests/e2e/ios-swift/typewriter.yml
+++ b/tests/e2e/ios-swift/typewriter.yml
@@ -1,11 +1,11 @@
-# Segment Typewriter Configuration (https://github.com/segmentio/typewriter)
+# Segment Typewriter Configuration (https://segment.com/docs/protocols/typewriter)
 # Just run `npx typewriter@next` to re-generate a client with the latest versions of these events.
 
 scripts:
   token: aws-okta exec dev-privileged -- chamber export typewriter | jq -r .typewriter_token
 
 # You can find more documentation on configuring this client in the Segment docs.
-# See: https://segment.com/docs/protocols/typewriter/swift
+# See: https://segment.com/docs/protocols/typewriter
 client:
   sdk: analytics-ios
   language: swift
