--- a/typewriter.yml
+++ b/typewriter.yml
@@ -1,4 +1,4 @@
-# Segment Typewriter Configuration (https://github.com/segmentio/typewriter)
+# Segment Typewriter Configuration (https://segment.com/docs/protocols/typewriter)
 # Just run `npx typewriter@next` to re-generate a client with the latest versions of these events.
 
 scripts:
@@ -6,7 +6,7 @@ scripts:
   after: ./node_modules/.bin/prettier --write src/analytics/plan.json
 
 # You can find more documentation on configuring this client in the Segment docs.
-# See: https://segment.com/docs/protocols/typewriter/typescript
+# See: https://segment.com/docs/protocols/typewriter
 client:
   sdk: analytics-node
   language: typescript
