--- a/package.json
+++ b/package.json
@@ -25,13 +25,13 @@
   },
   "devDependencies": {
     "@types/analytics-node": "^3.1.1",
+    "@types/got": "^9.6.7",
     "@types/hapi__joi": "^15.0.2",
     "@types/jest": "^24.0.11",
     "@types/js-yaml": "^3.12.1",
     "@types/json-schema": "^7.0.3",
     "@types/lodash": "^4.14.123",
     "@types/node": "^11.13.6",
-    "@types/node-fetch": "^2.3.3",
     "@types/prettier": "^1.16.3",
     "@types/prompts": "2.0.0",
     "@typescript-eslint/eslint-plugin": "^1.6.0",
@@ -58,6 +58,7 @@
     "ajv": "^6.10.0",
     "analytics-node": "^3.3.0",
     "caller-path": "^2.0.0",
+    "got": "^9.6.0",
     "handlebars": "^4.1.2",
     "ink": "^2.3.0",
     "ink-link": "^1.0.0",
@@ -65,7 +66,6 @@
     "js-yaml": "^3.13.1",
     "latest-version": "^5.1.0",
     "lodash": "4.17.12",
-    "node-fetch": "^2.5.0",
     "node-machine-id": "^1.1.12",
     "prettier": "^1.17.0",
     "prompts": "^2.0.4",
