--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/jest": "^24.0.11",
     "@types/js-yaml": "^3.12.1",
     "@types/json-schema": "^7.0.3",
+    "@types/json-stable-stringify": "^1.0.32",
     "@types/lodash": "^4.14.123",
     "@types/node": "^11.13.6",
     "@types/prettier": "^1.16.3",
@@ -63,6 +64,7 @@
     "ink-link": "^1.0.0",
     "ink-spinner": "^3.0.1",
     "js-yaml": "^3.13.1",
+    "json-stable-stringify": "^1.0.1",
     "latest-version": "^5.1.0",
     "lodash": "4.17.12",
     "node-machine-id": "^1.1.12",
