init command; remove TYPEWRITER_TOKEN

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "devDependencies": {
     "@types/analytics-node": "^3.1.1",
+    "@types/fast-levenshtein": "^0.0.1",
     "@types/got": "^9.6.7",
     "@types/hapi__joi": "^15.0.2",
     "@types/jest": "^24.0.11",
@@ -58,11 +59,15 @@
     "ajv": "^6.10.0",
     "analytics-node": "^3.3.0",
     "caller-path": "^2.0.0",
+    "fast-levenshtein": "^2.0.6",
+    "figures": "^3.0.0",
     "got": "^9.6.0",
     "handlebars": "^4.1.2",
     "ink": "^2.3.0",
     "ink-link": "^1.0.0",
+    "ink-select-input": "^3.1.2",
     "ink-spinner": "^3.0.1",
+    "ink-text-input": "^3.2.1",
     "js-yaml": "^3.13.1",
     "json-stable-stringify": "^1.0.1",
     "latest-version": "^5.1.0",
