--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
   },
   "devDependencies": {
     "@types/analytics-node": "^3.1.1",
-    "@types/fast-levenshtein": "^0.0.1",
     "@types/got": "^9.6.7",
     "@types/hapi__joi": "^15.0.2",
     "@types/jest": "^24.0.11",
@@ -59,8 +58,8 @@
     "ajv": "^6.10.0",
     "analytics-node": "^3.3.0",
     "caller-path": "^2.0.0",
-    "fast-levenshtein": "^2.0.6",
     "figures": "^3.0.0",
+    "fuse.js": "^3.4.5",
     "got": "^9.6.0",
     "handlebars": "^4.1.2",
     "ink": "^2.3.0",
