--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
   "dependencies": {
     "@hapi/joi": "^15.1.1",
     "ajv": "^6.10.0",
-    "analytics-node": "^3.3.0",
+    "analytics-node": "3.4.0-beta.1",
     "caller-path": "^2.0.0",
     "figures": "^3.0.0",
     "fuse.js": "^3.4.5",
