--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "lint": "eslint './src/**/*.{ts,tsx}'",
     "release": "yarn run build && np",
     "prerelease": "yarn run build && np prerelease --any-branch --tag next --no-release-draft",
-    "prepare": "snyk protect"
+    "postinstall": "snyk protect"
   },
   "engines": {
     "node": ">=0.10.15"
@@ -61,7 +61,7 @@
     "fuse.js": "^3.4.5",
     "got": "^9.6.0",
     "handlebars": "^4.1.2",
-    "ink": "^2.4.0",
+    "ink": "^2.5.0",
     "ink-link": "^1.0.0",
     "ink-select-input": "^3.1.2",
     "ink-spinner": "^3.0.1",
